examples/test/testpolicy1118.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1118
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key13: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value0
      podSelector:
        matchLabels:
          key24: value34
          key39: value14
          key30: value19
